--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -166,6 +166,9 @@
                                     <a href="../injectables/ApiService.html" >ApiService</a>
                                 </li>
                                 <li class="link">
+                                    <a href="../injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                </li>
+                                <li class="link">
                                     <a href="../injectables/UploadService.html" >UploadService</a>
                                 </li>
                         </ul>
@@ -365,6 +368,9 @@
                                            <a href="../injectables/ApiService.html" >ApiService</a>
                                        </li>
                                        <li class="link">
+                                           <a href="../injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                       </li>
+                                       <li class="link">
                                            <a href="../injectables/UploadService.html" >UploadService</a>
                                        </li>
                                </ul>
@@ -515,6 +521,9 @@
                                 <a href="#drawerEl">drawerEl</a>
                             </li>
                             <li>
+                                <a href="#sidenav">sidenav</a>
+                            </li>
+                            <li>
                                 <a href="#title">title</a>
                             </li>
                         </ul>
@@ -528,6 +537,9 @@
                 <tr>
                     <td class="col-md-4">
                         <ul class="index-list">
+                            <li>
+                                <a href="#close">close</a>
+                            </li>
                             <li>
                                 <a href="#ngAfterViewInit">ngAfterViewInit</a>
                             </li>
@@ -555,6 +567,43 @@
                 <tbody>
                     <tr>
                         <td class="col-md-4">
+                            <a name="close"></a>
+                            <span class="name">
+                                <b>
+                                close
+                                </b>
+                                <a href="#close"><span class="fa fa-link"></span></a>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+    <code>close()</code>
+                        </td>
+                    </tr>
+    
+    
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/app.component.ts:31</a></div>
+                                </td>
+                            </tr>
+    
+                    <tr>
+                        <td class="col-md-4">
+    
+                                <div class="io-description">
+                                    <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+    
+                                </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="table table-sm table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="col-md-4">
                             <a name="ngAfterViewInit"></a>
                             <span class="name">
                                 <b>
@@ -573,7 +622,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/app.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/app.component.ts:16</a></div>
                                 </td>
                             </tr>
     
@@ -610,7 +659,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/app.component.ts:25</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/app.component.ts:28</a></div>
                                 </td>
                             </tr>
     
@@ -659,7 +708,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/app.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/app.component.ts:15</a></div>
                                 </td>
                             </tr>
     
@@ -698,7 +747,46 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/app.component.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/app.component.ts:12</a></div>
+                                </td>
+                            </tr>
+    
+    
+                </tbody>
+            </table>
+            <table class="table table-sm table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="col-md-4">
+                            <a name="sidenav"></a>
+                            <span class="name">
+                                <b>
+                                sidenav
+                                </b>
+                                <a href="#sidenav"><span class="fa fa-link"></span></a>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <code>sidenav:     <code>MatSidenav</code>
+    </code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Type : </i>    <code>MatSidenav</code>
+    
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Decorators : </i><code>ViewChild</code>
+                            </td>
+                        </tr>
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/app.component.ts:13</a></div>
                                 </td>
                             </tr>
     
@@ -737,7 +825,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/app.component.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/app.component.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -752,6 +840,8 @@
     <div class="tab-pane fade tab-source-code" id="c-source">
         <pre class="line-numbers"><code class="language-typescript">import {  AfterViewInit, Component, ElementRef, ViewChild } from &#x27;@angular/core&#x27;;
 import {MDCPersistentDrawer,MDCTemporaryDrawer} from &#x27;@material/drawer&#x27;;
+import {MatSidenav,} from &#x27;@angular/material/sidenav&#x27;;
+import{MatNavList} from &#x27;@angular/material&#x27;;
 declare var mdc: any;
 @Component({
   selector: &#x27;app-root&#x27;,
@@ -760,6 +850,7 @@ declare var mdc: any;
 })
 export class AppComponent implements AfterViewInit {
   @ViewChild(&#x27;drawer&#x27;) drawerEl: ElementRef;
+  @ViewChild(&#x27;sidenav&#x27;) sidenav: MatSidenav;
   title &#x3D; &#x27;app&#x27;;
   drawer: any;
   ngAfterViewInit(): void {
@@ -777,12 +868,16 @@ export class AppComponent implements AfterViewInit {
   toggle() {
     this.drawer.open &#x3D; !this.drawer.open;
   }
+  close(){
+    this.sidenav.close();
+  }
+  
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade" id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;header id&#x3D;&quot;shrine-header&quot;
+        <pre class="line-numbers"><code class="language-html">&lt;!-- &lt;header id&#x3D;&quot;shrine-header&quot;
 class&#x3D;&quot;mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-background&quot;&gt;
 &lt;div class&#x3D;&quot;mdc-toolbar__row&quot;&gt;
 &lt;section class&#x3D;&quot;mdc-toolbar__section mdc-toolbar__section--align-center&quot;&gt;
@@ -794,9 +889,15 @@ class&#x3D;&quot;mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-backg
 &lt;h1 id&#x3D;&quot;shrine-logo&quot; class&#x3D;&quot;mdc-toolbar__title&quot;&gt;&lt;span&gt;Wrapd&lt;/span&gt;&lt;/h1&gt;
 &lt;/section&gt;
 &lt;/div&gt;
-&lt;/header&gt;
-
-&lt;aside id&#x3D;&quot;shrine-nav-menu&quot; class&#x3D;&quot;mdc-temporary-drawer&quot; #drawer data-mdc-auto-init&#x3D;&quot;MDCTemporaryDrawer&quot;&gt;
+&lt;/header&gt; --&gt;
+&lt;div class&#x3D;&quot;example-container&quot;&gt;
+&lt;mat-toolbar class&#x3D;&quot;example-toolbar&quot; color&#x3D;&quot;primary&quot;&gt;
+        &lt;mat-toolbar-row&gt;
+          &lt;button class&#x3D;&quot;mat-icon-button&quot; (click)&#x3D;&quot;sidenav.toggle()&quot;&gt;&lt;mat-icon&gt;menu&lt;/mat-icon&gt;&lt;/button&gt;
+          &lt;span&gt;Sample App&lt;/span&gt;
+        &lt;/mat-toolbar-row&gt;
+&lt;/mat-toolbar&gt;
+&lt;!-- &lt;aside id&#x3D;&quot;shrine-nav-menu&quot; class&#x3D;&quot;mdc-temporary-drawer&quot; #drawer data-mdc-auto-init&#x3D;&quot;MDCTemporaryDrawer&quot;&gt;
 &lt;nav class&#x3D;&quot;mdc-temporary-drawer__drawer&quot;&gt;
 &lt;header class&#x3D;&quot;mdc-temporary-drawer__header&quot;&gt;&lt;/header&gt;
 &lt;nav class&#x3D;&quot;mdc-temporary-drawer__content mdc-list&quot;&gt;
@@ -810,13 +911,23 @@ class&#x3D;&quot;mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-backg
 &lt;/nav&gt;
 &lt;/aside&gt;
 
-&lt;main &gt;
-  &lt;router-outlet&gt;&lt;/router-outlet&gt;
-&lt;/main&gt;
+--&gt;
 
+&lt;mat-sidenav-container class&#x3D;&quot;example-sidenav-container&quot; (backdropClick)&#x3D;&quot;sidenav.close()&quot; &gt;
+  &lt;mat-sidenav #sidenav (keydown.escape)&#x3D;&quot;sidenav.close()&quot;&gt;
+      &lt;mat-nav-list&gt;
+      &lt;a mat-list-item routerLink&#x3D;&quot;&quot;&gt;Dashboard&lt;/a&gt;
+      &lt;a mat-list-item routerLink&#x3D;&quot;orders&quot;&gt;Orders&lt;/a&gt;
+      &lt;a mat-list-item routerLink&#x3D;&quot;products&quot;&gt;Products&lt;/a&gt;
+      &lt;/mat-nav-list&gt;
+  &lt;/mat-sidenav&gt;
 
+  &lt;mat-sidenav-content&gt;
+      &lt;router-outlet&gt;&lt;/router-outlet&gt;
+  &lt;/mat-sidenav-content&gt;
+&lt;/mat-sidenav-container&gt;
 
-
+&lt;/div&gt;
 
 </code></pre>
     </div>
@@ -844,7 +955,7 @@ class&#x3D;&quot;mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-backg
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><header id="shrine-header"class="mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-background"><div class="mdc-toolbar__row"><section class="mdc-toolbar__section mdc-toolbar__section--align-center"><a id="shrine-nav-icon" class="material-icons mdc-ripple-surface" aria-label="Click to show the navigation menu" aria-controls="shrine-nav-menu" data-mdc-auto-init="MDCRipple" data-mdc-ripple-is-unbounded (click)="toggle()">menu</a><h1 id="shrine-logo" class="mdc-toolbar__title"><span>Wrapd</span></h1></section></div></header><aside id="shrine-nav-menu" class="mdc-temporary-drawer" #drawer data-mdc-auto-init="MDCTemporaryDrawer"><nav class="mdc-temporary-drawer__drawer"><header class="mdc-temporary-drawer__header"></header><nav class="mdc-temporary-drawer__content mdc-list"><a class="mdc-list-item" routerLink="home">Home</a><a class="mdc-list-item" routerLink="lajpat">Lajpat Nagar</a><a class="mdc-list-item" routerLink="laxmi">Laxmi Nagar</a><a class="mdc-list-item" routerLink="patel">Patel Nagar</a><a class="mdc-list-item" routerLink="delivery">Delivery</a><a class="mdc-list-item" routerLink="products">Products</a></nav></nav></aside><main >  <router-outlet></router-outlet></main></div>'
+        var COMPONENT_TEMPLATE = '<div><!-- <header id="shrine-header"class="mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-background"><div class="mdc-toolbar__row"><section class="mdc-toolbar__section mdc-toolbar__section--align-center"><a id="shrine-nav-icon" class="material-icons mdc-ripple-surface" aria-label="Click to show the navigation menu" aria-controls="shrine-nav-menu" data-mdc-auto-init="MDCRipple" data-mdc-ripple-is-unbounded (click)="toggle()">menu</a><h1 id="shrine-logo" class="mdc-toolbar__title"><span>Wrapd</span></h1></section></div></header> --><div class="example-container"><mat-toolbar class="example-toolbar" color="primary">        <mat-toolbar-row>          <button class="mat-icon-button" (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>          <span>Sample App</span>        </mat-toolbar-row></mat-toolbar><!-- <aside id="shrine-nav-menu" class="mdc-temporary-drawer" #drawer data-mdc-auto-init="MDCTemporaryDrawer"><nav class="mdc-temporary-drawer__drawer"><header class="mdc-temporary-drawer__header"></header><nav class="mdc-temporary-drawer__content mdc-list"><a class="mdc-list-item" routerLink="home">Home</a><a class="mdc-list-item" routerLink="lajpat">Lajpat Nagar</a><a class="mdc-list-item" routerLink="laxmi">Laxmi Nagar</a><a class="mdc-list-item" routerLink="patel">Patel Nagar</a><a class="mdc-list-item" routerLink="delivery">Delivery</a><a class="mdc-list-item" routerLink="products">Products</a></nav></nav></aside>--><mat-sidenav-container class="example-sidenav-container" (backdropClick)="sidenav.close()" >  <mat-sidenav #sidenav (keydown.escape)="sidenav.close()">      <mat-nav-list>      <a mat-list-item routerLink="">Dashboard</a>      <a mat-list-item routerLink="orders">Orders</a>      <a mat-list-item routerLink="products">Products</a>      </mat-nav-list>  </mat-sidenav>  <mat-sidenav-content>      <router-outlet></router-outlet>  </mat-sidenav-content></mat-sidenav-container></div></div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'DashboardComponent', 'selector': 'app-dashboard'},{'name': 'OrderAddComponent', 'selector': 'app-order-add'},{'name': 'OrderDetailComponent', 'selector': 'app-order-detail'},{'name': 'OrderListComponent', 'selector': 'app-order-list'},{'name': 'ProductAddComponent', 'selector': 'app-product-add'},{'name': 'ProductDetailComponent', 'selector': 'app-product-detail'},{'name': 'ProductListComponent', 'selector': 'app-product-list'},{'name': 'StoreDetailComponent', 'selector': 'app-store-detail'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'AppComponent'};
