--- a/src/app/product-module/product-detail/product-detail.component.scss
+++ b/src/app/product-module/product-detail/product-detail.component.scss
@@ -1,36 +1,46 @@
-.box1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2 ;
- }
- * {box-sizing: border-box;}
- 
- .wrapper {
-     margin-top: 100px;
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     grid-auto-rows: minmax(100px, auto);
- }
- 
- .wrapper > div {
-     border: 2px solid #ffa94d;
- }
- .box2 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
- }
- .box3 {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    grid-row-end: 5;
- }
- .box4 {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 4;
- }
+.detail-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 2rem;
+  margin: 100px 50px 0;
+  grid-template-areas:
+    "title title"
+    "kpi kpi"
+    "image information";
+  @media (max-width: 1024px) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas:
+      "title"
+      "kpi"
+      "image"
+      "information";
+  }
+}
+
+.title {
+  grid-area: title;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.kpi {
+  grid-area: kpi;
+  display: flex;
+  justify-content: space-between;
+  @media (max-width: 1024px) {
+    flex-direction: column;
+  }
+}
+@media (min-width: 1024px) {
+  .kpi > mat-card {
+    width: 200px;
+  }
+}
+.information {
+  grid-area: information;
+}
+.image {
+  grid-area: image;
+}
